<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto"
        android:layout_width="192dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="24dp"
        android:src="@drawable/mandiri" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_nama"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:id="@+id/nama"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/jurusan"
        android:text="@string/jurusan"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="1dp"
        android:text="@string/nim"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/angkatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textSize="18dp"
        android:text="@string/angkatan"
        android:textStyle="bold"
        android:textColor="#FF0000">

    </TextView>


</LinearLayout>